# xtmonctl

./: Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
packaging/arch/: PKGBUILD
packaging/debian/: build-deb.sh
scripts/: install.sh
src/: app.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  tui.rs  units.rs
src/ddc/: brightness.rs  detect.rs  mod.rs  parser.rs  types.rs
tests/: app_behavior.rs  brightness_units.rs  cli_smoke.rs  detect_parse.rs
