[package]
name = "xtmonctl"
version = "0.1.0"
edition = "2021"
description = "External monitor brightness control via ddcutil"
license = "MIT"

[dependencies]
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.13"
