[package]
name = "xtmonctl"
version = "1.0.3"
edition = "2021"
description = "External monitor brightness control via ddcutil"
license = "MIT"
repository = "https://github.com/ThorOdinson246/xmonctl-rs"
homepage = "https://github.com/ThorOdinson246/xmonctl-rs"
keywords = ["ddcutil", "monitor", "brightness", "linux", "tui"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
